# dinkybot

./: .gitignore  Dockerfile  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  bothelp.md  constants.py  dinkybot.py  docker-compose.yml  onboarding.py  pyproject.toml  requirements.txt  utils.py
.github/ISSUE_TEMPLATE/: feature_suggestion.yml
.github/workflows/: deploy.yml
docker/: Dockerfile  dinkypod.yml
