[project]
name = "dinkybot"
version = "1.0"
description = "Discord bot for Dinky Podcast"
authors = [
    {name = "Neill Wolf",email = "neillawolf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord-py (>=2.7.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "markdownify (>=1.2.2,<2.0.0)",
    "psutil (>=7.2.2,<8.0.0)",
    "ffmpeg4discord (>=0.2.2,<0.3.0)",
    "aiohttp (>=3.13.4,<4.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "yt-dlp (>=2026.3.17,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
